@@ -181,8 +181,9 @@ AUTHOR
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © 2011-2022 Michal Josef Špaček
-     BSD 2-Clause License
+    © 2011-2022 Michal Josef Špaček
+
+    BSD 2-Clause License
 
 VERSION
     0.08
