@@ -321,8 +321,9 @@ L<http://skim.cz>
 
 =head1 LICENSE AND COPYRIGHT
 
- © 2011-2022 Michal Josef Špaček
- BSD 2-Clause License
+© 2011-2022 Michal Josef Špaček
+
+BSD 2-Clause License
 
 =head1 VERSION
 
