@@ -1,4 +1,5 @@
 0.08
+ - Improve LICENSE AND COPYRIGHT section in doc.
  - Update copyright years.
 
 0.07 2020-01-12T00:03:27+01:00
